--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 Flask==2.3.3
+Flask-SQLAlchemy==3.1.1       # Veritabanı bağlantısı için
+Flask-WTF==1.2.1              # Formlar ve CSRF koruması için
+Flask-Login==0.6.3            # Kullanıcı oturum yönetimi için
+Flask-Migrate==4.0.5          # Veritabanı migration (yükseltme) sistemi için
+Flask-Mail==0.9.1             # E-posta göndermek için
+Werkzeug==2.3.7               # Flask ile gelen güvenlik ve şifreleme için
+
 
 
